Treinando classes - POO

--- a/11_Classes.ipynb
+++ b/11_Classes.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Meu Pé de Laranja Lima\n",
+    "\n",
+    "Objetivo: criar uma classe para acompanhar a vida útil do meu Pé de Laranja Lima, desde o plantio, crescimento, frutos e morte, seguindo as regras:\n",
+    "\n",
+    "- A arvore acabou de ser plantada. Não tem altura, idade, muito menos frutos.\n",
+    "\n",
+    "- A cada ano de vida, ela cresce um metro, mas a altura limite é de 10 metros.\n",
+    "\n",
+    "- Se atingir 100 anos, ela morre. Mas a partir dos 50 anos, ela pode morrer aleatoriamente.\n",
+    "\n",
+    "- Entre 5 e 10 anos, a arvore dará 100 frutos (laranjas) por ano. Entre 11 e 15 anos, ela dará 200 frutos por ano."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -63,16 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 1, 0, True)"
+       "(3, 3, 0, True)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
